--- a/obsidian_manager.ipynb
+++ b/obsidian_manager.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,12 +650,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Annotated\n",
-    "\n",
+    "from langchain_core.documents import Document\n",
     "from typing_extensions import TypedDict\n",
     "\n",
     "from langgraph.graph.message import add_messages\n",
@@ -1002,7 +1002,6 @@
     "    \"\"\"Node to process retrieved vault documents and extract relevant information.\"\"\"\n",
     "    # Extract documents from state\n",
     "    vault_findings = state.get(\"VaultFindings\", [])\n",
-    "    query_intent = state.get(\"Query_results\", {})\n",
     "    \n",
     "    # Process documents - here we're keeping it simple as you requested\n",
     "    processed_docs = []\n",
