--- a/obsidian_project.ipynb
+++ b/obsidian_project.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,16 +1226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "note_analysis(main_concept=['PER-INF-KM'], is_school_note=True, is_map_of_content=True, knowledge_type='map-of-content', created_date='None', status='None', content_tags=['School Subjects', 'Curriculum', 'Education'], workflow_tags=['organization', 'academic'], temporal_tags=[], parent_notes=['Education'], related_notes=['9° Subjects', '8° Subjects'], tasks=[], review_frequency='as-needed')"
+       "note_analysis(main_concept=['PER-INF-KM'], is_school_note=True, is_map_of_content=True, knowledge_type='map-of-content', created_date='None', status='None', content_tags=['Education', 'Curriculum', 'Subjects'], workflow_tags=['academic', 'organization'], temporal_tags=[], parent_notes=['School Subjects'], related_notes=['9° Subjects', '8° Subjects'], tasks=[], review_frequency='as-needed')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
        "'/Users/luisgg/tryingAI'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1354,9 +1354,9 @@
      "output_type": "stream",
      "text": [
       "Screenshots de cosas interesantes\n",
-      "main_concept=['PER-INF-KM'] is_school_note=False is_map_of_content=False knowledge_type='reference' created_date='2024-07-09 21:54' status='child' content_tags=['Interesting Media', 'Screenshots', 'Administration'] workflow_tags=['reference', 'media'] temporal_tags=[] parent_notes=['Administración'] related_notes=[] tasks=[] review_frequency='as-needed'\n",
+      "main_concept=['PER-INF-KM'] is_school_note=False is_map_of_content=False knowledge_type='reference' created_date='2024-07-09 21:54' status='child' content_tags=['Interesting Media', 'Screenshots', 'Administration'] workflow_tags=[] temporal_tags=[] parent_notes=['Administration'] related_notes=[] tasks=[] review_frequency='as-needed'\n",
       "---\n",
-      "last_modified: 10-03-2025-22-53\n",
+      "last_modified: 10-03-2025-23-03\n",
       "status: #child\n",
       "tags: PER-INF-KM\n",
       "is_map_of_content: False\n",
@@ -1384,7 +1384,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,15 +1402,15 @@
     "from langchain_community.vectorstores.utils import filter_complex_metadata\n",
     "\n",
     "vector_store = Chroma(\n",
-    "    collection_name=\"obsidian_jarvis\",\n",
+    "    collection_name=\"jarvis1.0\",\n",
     "    embedding_function=embeddings,\n",
-    "    persist_directory=\"./obsidian_jarvis_db\",  # Where to save data locally, remove if not necessary\n",
+    "    persist_directory=\"./jarvis1.0\",  # Where to save data locally, remove if not necessary\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1464,10 +1471,10 @@
     {
      "data": {
       "text/plain": [
-       "[Document(id='9ce842cf-a679-4b80-8365-374f4ca8c814', metadata={'concepts': 'PER-INF-KM', 'id': 0, 'last_modified': '2025-03-10T22:53:45.798109', 'tags': 'Administración, media', 'title': 'Screenshots de cosas interesantes', 'uuid': '9ce842cf-a679-4b80-8365-374f4ca8c814'}, page_content='#### Spotify WTF?\\n![[Pasted image 20231212223710.png]]')]"
+       "[Document(id='930dbfda-e61a-468c-915e-b94d6c3d6525', metadata={'concepts': 'PER-INF-KM', 'id': 0, 'last_modified': '2025-03-10T23:03:29.482208', 'tags': 'Administración, media', 'title': 'Screenshots de cosas interesantes', 'uuid': '930dbfda-e61a-468c-915e-b94d6c3d6525'}, page_content='#### Spotify WTF?\\n![[Pasted image 20231212223710.png]]')]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,25 +1488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Delete of nonexisting embedding ID: afa5d507-d461-469a-9228-a6d634d26f40\n",
-      "Delete of nonexisting embedding ID: afa5d507-d461-469a-9228-a6d634d26f40\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vector_store.delete(ids=['afa5d507-d461-469a-9228-a6d634d26f40'])"
+    "vector_store.delete(ids=['930dbfda-e61a-468c-915e-b94d6c3d6525'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,6 +1514,13 @@
    "source": [
     "# loading a vector store and making a query and a retriever"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
